# AMF-Viewer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.config.js
assets/: main.css  tailwind.css
src/: main.rs
src/amf/: amf3_object.rs  amf_highlight.rs  mod.rs  object_info.rs  object_properties.rs  object_type.rs  syntax_byte.rs
